# Moteur-Graphique

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Moteur-Graphique.sln  Moteur-Graphique.vcxproj  README.md  cmake_install.cmake  iteration-0-template.md  iteration-0.md  iteration-1.md  iteration-2.md  iteration-3.md  iteration-X-template.md  main
misc/: TODO.md
misc/avx256/: CMakeLists.txt  Vector.c  Vector.cpp  Vector.h  main.cpp
misc/business_card/: CMakeLists.txt  README.md  business_card_demo.cpp  makefile
src/: README.md  code_bits.hpp  code_bits2.hpp  cubes_generator.h  main.cpp  manCLI  samples.hpp
src/engine/: Abstract_Renderer.cpp  Abstract_Renderer.h  GraphicEngine.cpp  GraphicEngine.h  GraphicsEngine.cpp  GraphicsEngine.h  README.md  Renderer.cpp  Renderer.h
src/environment/: Animated.cpp  Animated.h  ApparenceProperties.cpp  ApparenceProperties.h  Camera.cpp  Camera.h  CoordinatesHandler.cpp  CoordinatesHandler.h  Environment.cpp  Environment.h  Light.cpp  Light.h  MappedTexture.cpp  MappedTexture.h  Object.cpp  Object.h  README.md  Tessel.cpp  Tessel.h
src/environment/Meshes/: MeshObject.cpp  MeshObject.h  PlyObjectMesh.cpp  PlyObjectMesh.h  UglySphere.cpp  UglySphere.h
src/environment/RegularObjects/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  PlyObject.cpp  PlyObject.h  Pyramid.cpp  Pyramid.h  Sphere.cpp  Sphere.h  UglySphere.cpp  UglySphere.h
src/include/: README.md  Renderer.h  config.h  environment.h  graphicsEngine.h  raytracer.h  ui.h  utils.h
src/raytracer/: README.md  RT_Commons.h  RT_OutputManager.cpp  RT_OutputManager.h  RT_Physics.cpp  RT_Physics.h  RT_Ray.cpp  RT_Ray.h  RT_RayCaster.cpp  RT_RayCaster.h  RT_RayEnvIntersector.cpp  RT_RayEnvIntersector.h  RT_RayTracer.cpp  RT_RayTracer.h  RayCaster.h  RayTracer.cpp  RayTracer.h
src/userInterface/: CommandLineInterface.cpp  CommandLineInterface.h  GraphicalUserInterface.cpp  GraphicalUserInterface.h  README.md
src/utils/: Chrono.cpp  Chrono.h  Chrono.hpp  Color.cpp  Color.h  ColorMapper.cpp  ColorMapper.h  OutputPictureManager.cpp  OutputPictureManager.h  Point3D.cpp  Point3D.h  README.md  Serializable.cpp  Serializable.h  Vector.cpp  Vector.h
src/utils/io/: OutputPictureManager.cpp  OutputPictureManager.h  PlyParser.hpp
visualstudio/: Moteur-Graphique.sln  Moteur-Graphique.vcxproj
